# Rust_CRUD

./: Cargo.toml  README.md  storage.json
src/: main.rs  models.rs  storage.rs
